@@ -27,8 +27,10 @@ import com.dnd.namuiwiki.domain.wiki.WikiType;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -84,7 +86,7 @@ public class DashboardService {
                     } else {
                         throw new ApplicationErrorException(ApplicationErrorType.INVALID_DASHBOARD_TYPE);
                     }
-                }).toList();
+                }).sorted(Comparator.comparingLong(DashboardComponentV2::getDashboardOrder)).collect(Collectors.toList());
 
         return new DashboardDto(dashboardComponents);
     }
